Changes for #11